Sun Mar 23 23:10:42 2003  Soeren Sandmann  <sandmann@daimi.au.dk>

	* src/display.c (meta_spew_event): just return if we are not verbose

2003-03-11  Havoc Pennington  <hp@pobox.com>

	Should fix #108108, #106217, tracked down by Owen Taylor and
	Frederic Crozat
	
	* src/window.c (meta_window_foreach_transient): change
	MetaWindowForeachFunc to return a boolean for whether to continue
	(meta_window_foreach_ancestor): new function
	(window_should_be_showing): use meta_window_foreach_ancestor	
	(unminimize_window_and_all_transient_parents): ditto
	(update_sm_hints): ditto
	(meta_window_is_ancestor_of_transient): ditto

	* src/stack.c (get_maximum_layer_of_ancestor): use
	meta_window_foreach_ancestor

2003-03-13  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "ml" to ALL_LINGUAS.

2003-03-10  Paul Duffy <dubhthach@zion.nuigalway.ie>
    
        * configure.in: Added Irish (ga) to ALL_LINGUAS
	
2003-03-10  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added Persian to ALL_LINGUAS.

2003-03-08  Havoc Pennington  <hp@pobox.com>

	* src/window.c (update_size_hints): Backport patch from Rob Adams
	to check that window min and max size hints are at least 1.  Fix
	for #107110.

2003-02-26  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS.

2003-02-22  Havoc Pennington  <hp@pobox.com>

	* src/display.c (event_callback): fix to unfocus window only when 
	you leave the window frame, not when you leave the window itself, 
	unless window has no frame. #100248 fix from Orien Vandenbergh

2003-02-20  Havoc Pennington  <hp@redhat.com>

	* src/stack.c (create_constraints): don't create constraints
	between windows on different screens, #106086 tracked down 
	by Arvind

2003-02-14  Arvind Samptur <arvind.samptur@wipro.com>

	* src/screen.c: (meta_screen_new) : Update the workspace
	names from gconf and set the NET_DESKTOP_NAMES atom.
	Renamed update_workspace_names() to set_workspace_names().
	Fixes #105498
